openshift-applier/files/airflow-template.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    labels:
      app: airflow
      template: airflow-template
    name: airflow
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 2Gi
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: airflow
      template: airflow-template
    name: airflow-webserver
  spec:
    replicas: 1
    selector:
      app: airflow
      tier: web
    strategy:
      type: Rolling
    template:
      metadata:
        labels:
          app: airflow
          tier: web
      spec:
        containers:
        - env:
          - name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
            value: postgresql+psycopg2://airflow:airflow@airflowdb:5432/airflow
          image: airflow-webserver
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 240
            periodsSeconds: 60
          name: airflow-webserver
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          volumeMounts:
          - mountPath: /usr/local/airflow
            name: airflow
        volumes:
        - name: airflow
          persistentVolumeClaim:
            claimName: airflow
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - airflow-webserver
        from:
          kind: ImageStreamTag
          name: airflow-webserver:latest
      type: ImageChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: airflow
      template: airflow-template
    name: airflow-webserver
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    selector:
      app: airflow
      tier: web
    sessionAffinity: None
    type: ClusterIP
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: airflow
      template: airflow-template
    name: airflow-webserver
  spec:
    to:
      kind: Service
      name: airflow-webserver
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    labels:
      app: airflow
      template: airflow-template
    name: airflow-scheduler
  spec:
    replicas: 0
    selector:
      app: airflow
      tier: scheduler
    strategy:
      type: Rolling
    template:
      metadata:
        labels:
          app: airflow
          tier: scheduler
      spec:
        containers:
        - env:
          - name: AIRFLOW__CORE__SQL_ALCHEMY_CONN
            value: postgresql+psycopg2://airflow:airflow@airflowdb:5432/airflow
          image: airflow-scheduler
          name: airflow-scheduler
          volumeMounts:
          - mountPath: /usr/local/airflow
            name: airflow
        volumes:
        - name: airflow
          persistentVolumeClaim:
            claimName: airflow
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - airflow-scheduler
        from:
          kind: ImageStreamTag
          name: airflow-scheduler:latest
      type: ImageChange
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: airflow
      template: airflow-template
    name: airflow-scheduler
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
    selector:
      app: airflow
      tier: scheduler
    sessionAffinity: None
    type: ClusterIP
kind: List
metadata: {}
